--- a/src/css/AddTask.module.css
+++ b/src/css/AddTask.module.css
@@ -16,9 +16,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 12px;
-    background-color: var(--bg-modal);
+    background-color: var(--bgModal);
     box-shadow: 0 6px 10px 2px #00000023;
-    z-index: var(--z-index-popup);
+    z-index: var(--zIndexPopup);
 }
 
 .headerNewTask {
@@ -39,12 +39,11 @@
     padding: 0 .8rem;
     font-size: 20px;
     font-weight: 600;
-    border: 2px solid var(--bg-modal-inputTitle-border);
+    border: 2px solid var(--borderInputNewTaskTitle);
     border-radius: 12px;
     outline: none;
     color: var(--black18);
-    /* text-align: center; */
-    background-color: var(--bg-modal-input);
+    background-color: var(--bgInputModal);
 
     &:focus {
         border: 2px solid var(--mainColor);
@@ -56,13 +55,13 @@
     max-height: 25rem;
     padding: 12px 8px;
     font-size: 19px;
-    border: 2px solid var(--bg-modal-input-border);
+    border: 2px solid var(--borderInputNewTaskDescription);
     border-radius: 12px;
     line-height: 1.5;
     resize: vertical;
     outline: none;
     color: var(--black18);
-    background-color: var(--bg-modal-input);
+    background-color: var(--bgInputModal);
 
     &:focus {
         border: 2px solid var(--mainColor);
